--- a/packages/ui-theme/icloud-theme/src/antd-vars-patch.less
+++ b/packages/ui-theme/icloud-theme/src/antd-vars-patch.less
@@ -264,3 +264,8 @@
 @steps-small-icon-margin: 0 10px 0 0;
 @steps-icon-font-size: @font-size-base;
 @steps-icon-size: 30px;
+
+// Tree
+// ---
+@tree-node-hover-bg: var(--color-brand-1);
+@tree-node-selected-bg: var(--theme-component-bg);
