fix: menu-dropdown osc 样式修复

--- a/packages/ui-theme/osui-theme/src/antd-vars-patch.less
+++ b/packages/ui-theme/osui-theme/src/antd-vars-patch.less
@@ -226,3 +226,7 @@
 @progress-default-color:var(--theme-primary-color);
 @progress-text-color: var(--progress-text-color);
 @progress-radius: var(--progress-radius);
+
+// Dropdown
+// ---
+@dropdown-edge-child-vertical-padding: 8px;
