--- a/packages/ui/menu-dropdown/src/index.less
+++ b/packages/ui/menu-dropdown/src/index.less
@@ -14,4 +14,11 @@
     &.@{ant-prefix}-dropdown-menu-submenu-popup ul {
         margin-left: -8px;
     }
+
+    .@{ant-prefix}-dropdown-menu {
+        &-item,
+        &-submenu-title {
+            padding: var(--dropdown-menu-item-padding);
+        }
+    }
 }
