fix: 修复date-picker suffix color

--- a/packages/ui/date-picker/src/index.less
+++ b/packages/ui/date-picker/src/index.less
@@ -2,11 +2,11 @@
 
 .@{osui-picker-class-prefix} {
     .@{ant-prefix}-picker-suffix {
-        color: var(--theme-text-color);
+        color: var(--date-picker-suffix-color);
     }
 
     &.@{ant-prefix}-picker-disabled {
-        border-color: var(--color-gray-4);
+        border-color: var(--theme-border-color-disabled);
         background: none;
     }
 
