fix: 调整menu dropdown osc主题样式

--- a/packages/ui-theme/osui-theme/src/antd-vars-patch.less
+++ b/packages/ui-theme/osui-theme/src/antd-vars-patch.less
@@ -83,8 +83,9 @@
 
 // Menu
 // ---
-@menu-inline-toplevel-item-height: 40px;
-@menu-item-height: 40px;
+@menu-inline-toplevel-item-height: 32px;
+@menu-item-height: 32px;
+@menu-item-group-height: 32px;
 @menu-collapsed-width: 80px;
 @menu-bg: var(--menu-bg);
 @menu-popup-bg: var(--menu-popup-bg);
@@ -95,6 +96,8 @@
 @menu-item-group-title-color: var(--menu-item-group-title-color);
 @menu-icon-size: @font-size-base;
 @menu-icon-size-lg: @font-size-lg;
+@menu-item-vertical-margin: 0;
+@menu-item-boundary-margin: 0;
 
 // Collapse
 // ---
@@ -146,7 +149,7 @@
 @btn-primary-color: var(--color-gray-1);
 @btn-primary-bg: var(--color-brand-6);
 @btn-shadow: 0 2px 0 rgba(0, 0, 0, 0);
-@btn-line-height: 23px;
+@btn-line-height: 1.5715;
 @btn-disable-color: var(--btn-disable-color);
 @btn-disable-bg: var(--btn-disable-bg);
 @btn-disable-border: var(--btn-disable-border);
