--- a/packages/ui/dropdown/src/index.less
+++ b/packages/ui/dropdown/src/index.less
@@ -8,5 +8,19 @@
         &-submenu-title {
             padding: var(--dropdown-menu-item-padding);
         }
+
+        &-item-group-title {
+            padding: 4px 16px 0px 16px;
+        }
+
+        &-item-group-list {
+            margin: 0;
+        }
+    }
+}
+
+.osui-menu-submenu {
+    .@{ant-prefix}-dropdown-menu-item-group-title {
+        padding: 4px 16px 0px 16px;
     }
 }
