fix: dropdown满足osui和icloud调整

--- a/packages/ui/dropdown/src/index.less
+++ b/packages/ui/dropdown/src/index.less
@@ -10,7 +10,7 @@
         }
 
         &-item-group-title {
-            padding: 4px 16px 0px 16px;
+            padding: var(--dropdown-menu-item-group-title-padding);
         }
 
         &-item-group-list {
@@ -21,6 +21,6 @@
 
 .osui-menu-submenu {
     .@{ant-prefix}-dropdown-menu-item-group-title {
-        padding: 4px 16px 0px 16px;
+        padding: var(--dropdown-menu-item-group-title-padding);
     }
 }
