fix: 调整Badge icloud主题样式

--- a/packages/ui-theme/icloud-theme/src/antd-vars-patch.less
+++ b/packages/ui-theme/icloud-theme/src/antd-vars-patch.less
@@ -269,3 +269,7 @@
 // ---
 @tree-node-hover-bg: var(--color-brand-1);
 @tree-node-selected-bg: var(--theme-component-bg);
+
+// Badge
+// --
+@badge-height: 16px;
