fix: 调整modal icloud样式

--- a/packages/ui/modal/src/index.less
+++ b/packages/ui/modal/src/index.less
@@ -18,6 +18,7 @@
     .@{ant-prefix}-modal-body {
         border-bottom: var(--modal-body-border-bottom);
         padding: var(--modal-body-padding);
+        margin: var(--modal-body-margin);
         overflow: auto;
         max-height: var(--modal-body-max-height);
     }
