--- a/packages/ui/button/src/index.less
+++ b/packages/ui/button/src/index.less
@@ -120,6 +120,8 @@
 .generate-face();
 
 .@{osui-button-class-prefix} {
+    min-width: var(--button-min-width);
+
     &-flex-center {
         display: inline-flex;
         align-items: center;
