--- a/packages/ui/timeline/src/index.less
+++ b/packages/ui/timeline/src/index.less
@@ -1,1 +1,12 @@
 @osui-timeline-class-prefix: osui-timeline;
+
+.@{osui-timeline-class-prefix} {
+    .ant-timeline-item-head {
+        width: var(--timeline-dot-size);
+        height: var(--timeline-dot-size);
+    }
+
+    .ant-timeline-item-content {
+        margin-left: var(--timeline-item-content-margin-left);
+    }
+}
