--- a/packages/ui-theme/icloud-theme/src/antd-vars-patch.less
+++ b/packages/ui-theme/icloud-theme/src/antd-vars-patch.less
@@ -275,4 +275,9 @@
 @badge-height: 16px;
 
 // Breadcrumb
+// ---
 @breadcrumb-link-color-hover: var(--theme-primary-color);
+
+// Steps
+// ---
+@steps-icon-size: 24px;
