--- a/packages/ui/tree/src/index.less
+++ b/packages/ui/tree/src/index.less
@@ -1,8 +1,8 @@
 @osui-tree-class-prefix: osui-tree;
 
 .@{osui-tree-class-prefix} {
-    .ant-tree-node-selected {
-        .ant-tree-title {
+    .@{ant-prefix}-tree-node-selected {
+        .@{ant-prefix}-tree-title {
             color: var(--theme-primary-color);
         }
     }
@@ -11,8 +11,8 @@
         font-size: 12px;
         line-height: 24px;
 
-        .ant-tree-switcher,
-        .ant-tree-node-content-wrapper {
+        .@{ant-prefix}-tree-switcher,
+        .@{ant-prefix}-tree-node-content-wrapper {
             line-height: 24px;
         }
     }
@@ -21,8 +21,8 @@
         font-size: 14px;
         line-height: 30px;
 
-        .ant-tree-switcher,
-        .ant-tree-node-content-wrapper {
+        .@{ant-prefix}-tree-switcher,
+        .@{ant-prefix}-tree-node-content-wrapper {
             line-height: 30px;
         }
     }
@@ -31,9 +31,28 @@
         font-size: 14px;
         line-height: 40px;
 
-        .ant-tree-switcher,
-        .ant-tree-node-content-wrapper {
+        .@{ant-prefix}-tree-switcher,
+        .@{ant-prefix}-tree-node-content-wrapper {
             line-height: 40px;
         }
+    }
+
+    .@{ant-prefix}-tree-switcher {
+        width: 18px;
+    }
+
+    .@{ant-prefix}-tree-switcher .@{ant-prefix}-tree-switcher-icon,
+    .@{ant-prefix}-tree-switcher .@{ant-prefix}-select-tree-switcher-icon {
+        display: inline-block;
+        font-size: 12px;
+        vertical-align: -.125em;
+    }
+
+    &.@{ant-prefix}-tree .@{ant-prefix}-tree-node-content-wrapper {
+        padding: 0 10px;
+    }
+
+    &.@{ant-prefix}-tree .@{ant-prefix}-tree-treenode {
+        padding-bottom: 0;
     }
 }
